--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,3 @@
 database: "this is the database name from main"
-password: '{keyvault}TestKey'
+password: "{keyvault}VaultSQLPassword"
 username: username
