--- a/application.yml
+++ b/application.yml
@@ -1,3 +1,3 @@
 database: "this is the database name from main"
 username: username
-super-secret-key: "{keyvault}DemoKey"
+super-secret-key: "{keyvault}secret-key"
