--- a/application.yml
+++ b/application.yml
@@ -2,3 +2,4 @@ database: "this is the database name from main"
 username: username
 super-secret-key: "{keyvault}secret-key"
 log-level: "Warning"
+database-name: "dbName"
