--- a/application.yml
+++ b/application.yml
@@ -1,5 +1,5 @@
 database: "this is the database name from main"
-username: sensei
+username: sensei2
 super-secret-key: "{keyvault}secret-key"
 log-level: "Warning"
 database-name: "dbName"
